syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/mas-wig/post-api-1/pb";

message SignUpUserInput{
    string name = 1;
    string email = 2;
    string password = 3;
    string passwordConfirm = 4;
}

message SignUpUserResponse { User user = 1;}
